@@ -1,6 +1,7 @@
 package mx.com.ferbo.business.deduccion.isr;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
@@ -13,6 +14,7 @@ import mx.com.ferbo.business.deduccion.AbstractDBL;
 import mx.com.ferbo.business.deduccion.IDeducciones;
 import mx.com.ferbo.business.deduccion.subsidio.ISubsidioEmpleo;
 import mx.com.ferbo.business.deduccion.subsidio.SubsidioEmpleoExecutor;
+import mx.com.ferbo.business.nomina.ParametrosNomina;
 import mx.com.ferbo.business.otropago.AbstractOtroPago;
 import mx.com.ferbo.enums.ValoresBD;
 import mx.com.ferbo.model.CatTarifaISR;
@@ -48,6 +50,7 @@ public class ISRSemanalDBL2 extends AbstractDBL implements IDeducciones {
 	private List<CatTarifaISR>     tablaISRSemanal = null;
 	private List<CatTarifaISR>     tablaISRMensual = null;
 	
+	@Deprecated
 	public ISRSemanalDBL2(Date periodoInicio, Date periodoFin, List<CatTipoDeduccion> tiposDeduccion, List<CatTipoOtroPago> tiposOtroPago, List<CatTarifaISR> tablaISR, List<DetNomina> nominaMensual)
 	throws SGPException {
 		try {
@@ -71,6 +74,30 @@ public class ISRSemanalDBL2 extends AbstractDBL implements IDeducciones {
 		}
 	}
 	
+	public ISRSemanalDBL2(ParametrosNomina parametros, List<DetNomina> nominaMensual)
+	throws SGPException {
+		try {
+			this.setPeriodo(parametros.getPeriodoInicio(), parametros.getPeriodoFin());
+			this.tiposDeduccion = parametros.getTiposDeduccion();
+			this.tiposOtroPago = parametros.getTiposOtroPago();
+			this.tablaISR = parametros.getTablaISR();
+			this.listaNominaMes = nominaMensual;
+			
+			this.tablaISRSemanal = this.tablaISR.stream()
+					.filter(t -> "s".equalsIgnoreCase(t.getTipo()))
+					.collect(Collectors.toList())
+					;
+			
+			this.tablaISRMensual = this.tablaISR.stream()
+					.filter(t -> "m".equalsIgnoreCase(t.getTipo()))
+					.collect(Collectors.toList())
+					;
+		} catch(Exception ex) {
+			throw new SGPException("Problema al iniciar el objeto de cálculo de ISR semanal...", ex);
+		}
+		
+	}
+	
 	private void setPeriodo(Date periodoInicio, Date periodoFin) {
 		this.periodoInicio   = periodoInicio;
 		this.periodoFin      = periodoFin;
@@ -80,7 +107,8 @@ public class ISRSemanalDBL2 extends AbstractDBL implements IDeducciones {
 	@Override
 	public void procesar(DetNomina nomina) {
 		List<DetNominaDeduccion>  deduccionesISR = null;
-		List<DetNominaPercepcion> percepciones = null;
+		List<DetNominaPercepcion> percepcionesSemanales = null;
+		List<DetNominaPercepcion> percepcionesMensuales = null;
 		ISRBaseDBL          baseISRBO = null;
 		TarifaISRBL        tarifaISRBO = null;
 		
@@ -121,13 +149,13 @@ public class ISRSemanalDBL2 extends AbstractDBL implements IDeducciones {
 		
 		try {
 			idx = this.nuevoIndiceDe(nomina.getDeducciones());
-			percepciones = nomina.getPercepciones();
+			percepcionesSemanales = nomina.getPercepciones();
 			
 			deduccionesISR = new ArrayList<>();
 			
 			//1. Obtener la base para el ISR (semanal)
 			//Para el cálculo del ISR a retener al empleado se deben sumar las percepciones que gravan para ISR
-			baseISRBO = new ISRBaseDBL(percepciones);
+			baseISRBO = new ISRBaseDBL(percepcionesSemanales);
 			baseISRBO.setTiposDeduccion(this.tiposDeduccion);
 			dBaseISR = baseISRBO.calcular(nomina);
 			baseISRSemanal = dBaseISR.getImporte();
@@ -156,7 +184,7 @@ public class ISRSemanalDBL2 extends AbstractDBL implements IDeducciones {
 			
 			//CALCULO DE ISR MENSUAL
 			if(this.ultimaSemanaMes) {
-				log.info("Percepciones: {}", percepciones);
+				log.info("Percepciones: {}", percepcionesSemanales);
 				
 				baseISRMensual = this.calcularBaseISRAcumulado(baseISRSemanal, isrDespuesDeSubsidioSemanal);
 				log.info("Base ISR (mensual): {}", baseISRMensual);
@@ -191,8 +219,8 @@ public class ISRSemanalDBL2 extends AbstractDBL implements IDeducciones {
 					importeSubsidio = ValoresBD._CERO.get();
 				
 				log.info("Subsidio otorgado por ajuste mensual: {}", importeSubsidio);
-				
-				isrDespuesDeSubsidioSemanal = isrAntesDeSubsidioSemanal.subtract(importeSubsidio);
+//				//TODO ¿eliminar la siguiente línea de código?
+//				isrDespuesDeSubsidioSemanal = isrAntesDeSubsidioSemanal.subtract(importeSubsidio);
 				
 				isrDespuesDeSubsidioSemanal = isrAntesDeSubsidioMensual
 						.subtract(isrAntesDeSubsidioSemanasAnteriores)
@@ -204,13 +232,13 @@ public class ISRSemanalDBL2 extends AbstractDBL implements IDeducciones {
 					.subtract(importeSubsidioAcumulado)
 					.compareTo(ValoresBD._CERO.get()) < 0) {
 					
-					ajusteISRMensual = importeSubsidioAcumulado.setScale(2, BigDecimal.ROUND_HALF_UP);
+					ajusteISRMensual = importeSubsidioAcumulado.setScale(2, RoundingMode.HALF_UP);
 					dAjusteISRMensual = this.getDeduccion(nomina, idx++, TD_AJUSTE_ISR_MENSUAL, CVE_AJUSTE_ISR_MENSUAL, "ISR de ajuste mensual", true, true, ajusteISRMensual);
 					
-					ajusteAlSubsidioCausado = importeSubsidioAcumulado.setScale(2, BigDecimal.ROUND_HALF_UP);
+					ajusteAlSubsidioCausado = importeSubsidioAcumulado.setScale(2, RoundingMode.HALF_UP);
 					dAjusteAlSubsidioCausado = this.getDeduccion(nomina, idx++, TD_AJUSTE_AL_SUBSIDIO, CVE_AJUSTE_AL_SUBSIDIO, "Ajuste al subsidio causado", true, false, ajusteAlSubsidioCausado);
 					
-					isrAjustadoPorSubsidio = importeSubsidioAcumulado.setScale(2, BigDecimal.ROUND_HALF_UP);
+					isrAjustadoPorSubsidio = importeSubsidioAcumulado.setScale(2, RoundingMode.HALF_UP);
 					this.procesaISRAjustadoPorSubsidio(nomina, isrAjustadoPorSubsidio);
 				}
 			}
@@ -221,7 +249,7 @@ public class ISRSemanalDBL2 extends AbstractDBL implements IDeducciones {
 			if(isrDespuesDeSubsidioSemanal.compareTo(ValoresBD._CERO.get()) < 0) {
 				importe = ValoresBD._CERO.get();
 			} else {
-				importe = isrDespuesDeSubsidioSemanal.setScale(2, BigDecimal.ROUND_HALF_UP);
+				importe = isrDespuesDeSubsidioSemanal.setScale(2, RoundingMode.HALF_UP);
 			}
 			
 			dISR = new DetNominaDeduccion.Builder()
@@ -264,7 +292,9 @@ public class ISRSemanalDBL2 extends AbstractDBL implements IDeducciones {
 		for(DetNomina n : listaNominaMes) {
 			List<DetNominaDeduccion> deducciones = n.getDeducciones();
 			isrSemanal = deducciones.stream()
-					.filter(d -> d.getClave().equals(CVE_ISR) && d.getProcesar() == true )
+					.filter(d ->    (d.getClave().equals(CVE_ISR) && d.getProcesar() == true)
+							     || (d.getClave().equalsIgnoreCase(CVE_ISR_LEY_174))
+					       )
 					.map(d -> d.getImporte())
 					.reduce(ValoresBD._CERO.get(), BigDecimal :: add)
 					;
@@ -282,7 +312,9 @@ public class ISRSemanalDBL2 extends AbstractDBL implements IDeducciones {
 		for(DetNomina n : listaNominaMes) {
 			List<DetNominaDeduccion> deducciones = n.getDeducciones();
 			isrSemanal = deducciones.stream()
-					.filter(d -> d.getClave().equalsIgnoreCase(CVE_ISR_ANTES_DE_SUBSIDIO))
+					.filter(d ->    d.getClave().equalsIgnoreCase(CVE_ISR_ANTES_DE_SUBSIDIO)
+							     || d.getClave().equalsIgnoreCase(CVE_ISR_LEY_174)
+					       )
 					.map(d -> d.getImporte())
 					.reduce(ValoresBD._CERO.get(), BigDecimal :: add)
 					;
@@ -399,19 +431,18 @@ public class ISRSemanalDBL2 extends AbstractDBL implements IDeducciones {
 			
 			//Se evalúa la Base de ISR y el ISR pagado por cada semana.
 			for(DetNomina nomina : this.listaNominaMes) {
-				
 				//Se obtiene la base de ISR pagado por cada semana.
 				List<DetNominaPercepcion> collectPercepciones = nomina.getPercepciones()
 						.stream()
 						.filter(p -> (p.getImporteGravado().compareTo(ValoresBD._CERO.get()) > 0 ))
 						.collect(Collectors.toList());
 				
-				
 				baseISR = collectPercepciones
 						.stream()
 						.map(item -> item.getImporteGravado())
 						.reduce(ValoresBD._CERO.get(), BigDecimal::add)
 						;
+				log.info("(Semana {}) Base de ISR = {}", nomina.getPeriodo(), baseISR);
 				
 				listaBaseISR.add(baseISR);
 			}
@@ -426,7 +457,7 @@ public class ISRSemanalDBL2 extends AbstractDBL implements IDeducciones {
 			log.info("Base ISR mensual: {}", baseISRAcumulado);
 			
 		} catch(Exception ex) {
-			baseISRAcumulado = BigDecimal.ZERO.setScale(2, BigDecimal.ROUND_HALF_UP);
+			baseISRAcumulado = ValoresBD._CERO.get();
 		}
 		
 		return baseISRAcumulado;
@@ -446,7 +477,7 @@ public class ISRSemanalDBL2 extends AbstractDBL implements IDeducciones {
 			//PRIMERO SE VERIFICA SI EL INICIO DE LA SEMANA COINCIDE CON EL PRIMER DIA DEL MES. 
 			diaInicioMes = DateUtil.getDia(periodoInicio);
 			
-			if(diaInicioMes.compareTo(new Integer(1)) == 0)
+			if(diaInicioMes.compareTo(Integer.valueOf(1)) == 0)
 				throw new SGPException("La semana en curso es la primera del mes.");
 			
 			//SI NO, SE VERIFICA SI EL MES DEL PRIMER DIA DE LA SEMANA EN CURSO ES DIFERENTE AL MES DEL ÚLTIMO DIA DE LA SEMANA EN CURSO.
@@ -465,13 +496,13 @@ public class ISRSemanalDBL2 extends AbstractDBL implements IDeducciones {
 			mesSiguienteFin = DateUtil.getMes(periodoSiguienteFin);
 			
 			if(mesSiguienteInicio.compareTo(mesSiguienteFin) != 0) {
-				ultimaSemanaMes = new Boolean(true);
+				ultimaSemanaMes = Boolean.TRUE;
 			} else {
-				ultimaSemanaMes = new Boolean(false);
+				ultimaSemanaMes = Boolean.FALSE;
 			}
 			
 		} catch(Exception ex) {
-			ultimaSemanaMes = new Boolean(false);
+			ultimaSemanaMes = Boolean.FALSE;
 		}
 		
 		return ultimaSemanaMes;
